Refatoração da lógica de busca dos pedidos para facilitar manutenabilidade.