@@ -1,11 +1,8 @@
 package br.luizalabs.desafio.logistica.service;
 
-import br.luizalabs.desafio.logistica.dto.OrderDTO;
-import br.luizalabs.desafio.logistica.dto.ProductDTO;
 import br.luizalabs.desafio.logistica.dto.UsersOrdersDTO;
-import br.luizalabs.desafio.logistica.entity.Order;
-import br.luizalabs.desafio.logistica.entity.Product;
 import br.luizalabs.desafio.logistica.entity.User;
+import br.luizalabs.desafio.logistica.factory.UserOrdersDTOFactory;
 import br.luizalabs.desafio.logistica.repository.OrderRepository;
 import br.luizalabs.desafio.logistica.repository.ProductOrderRepository;
 import br.luizalabs.desafio.logistica.repository.UserRepository;
@@ -16,7 +13,6 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
@@ -46,24 +42,11 @@ public class UserService {
     public Page<UsersOrdersDTO> findUsersOrders(Long orderId, LocalDate startDate, LocalDate endDate, Pageable pageable) {
 
         Page<User> users = userRepository.findUsersWithOrder(orderId, startDate, endDate, pageable);
+        UserOrdersDTOFactory factory = new UserOrdersDTOFactory(orderRepository, productOrderRepository, orderId);
 
-        List<UsersOrdersDTO> usersOrdersDTO = new ArrayList<>();
-
-        List<User> usersList = new ArrayList<>(users.stream().toList());
-
-        for(User user : usersList) {
-            List<Order> orders = orderRepository.findOrderByUser(user.getId());
-
-            List<OrderDTO> orderDTOS = orders.stream().map(order -> {
-                List<Product> productsByOrder = productOrderRepository.findProductsByOrder(order.getId());
-                return new OrderDTO(order.getId(), order.getTotalAmount(), order.getOrderDate(), productsByOrder.stream().map(product -> new ProductDTO(product.getId(), product.getPrice())).toList());
-            }).collect(Collectors.toList());
-
-            UsersOrdersDTO userOrdersDTO = new UsersOrdersDTO(user.getId(), user.getName(), orderDTOS);
-
-            usersOrdersDTO.add(userOrdersDTO);
-
-        }
+        List<UsersOrdersDTO> usersOrdersDTO = users.stream()
+                .map(factory::createUserOrdersDTO)
+                .collect(Collectors.toList());
 
 
         return new PageImpl<>(usersOrdersDTO, pageable, users.getTotalElements());
